TERP proj/force-app/main/default/objects/Weekly_Stats__c/Weekly_Stats__c.object-meta.xml
<CustomObject>
    <label>Weekly Stats</label>
    <nameField>
        <label>Weekly Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>