TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowUps__c.field-meta.xml
<CustomField>
    <fullName>FollowUps__c</fullName>
    <label>No. of Follow Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>