TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/Followups_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Followups_Response_Rate__c</fullName>
    <formula>((FollowupsPositiveResponse__c  +  FollowupswarmResponse__c  +  FollowupsNegativeResponse__c) /  FollowupsOpened__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Followups Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>