TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsBounced__c.field-meta.xml
<CustomField>
    <fullName>FollowupsBounced__c</fullName>
    <label>Followups Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>