TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsClicked__c.field-meta.xml
<CustomField>
    <fullName>FollowupsClicked__c</fullName>
    <label>Followups Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>