TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsNegativeResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupsNegativeResponse__c</fullName>
    <label>Followups Negative Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>