TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsOpen__c.field-meta.xml
<CustomField>
    <fullName>FollowupsOpen__c</fullName>
    <formula>(FollowupsOpened__c  /  FollowUps__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Followups Open %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>