TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsOpened__c.field-meta.xml
<CustomField>
    <fullName>FollowupsOpened__c</fullName>
    <label>Followups Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>