TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsPositiveResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupsPositiveResponse__c</fullName>
    <label>Followups Positive Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>