TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupsUnsubscribed__c.field-meta.xml
<CustomField>
    <fullName>FollowupsUnsubscribed__c</fullName>
    <label>Followups Unsubscribed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>