TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FollowupswarmResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupswarmResponse__c</fullName>
    <label>Followups warm Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>