TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/Fresh_Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Response_Rate__c</fullName>
    <formula>((FreshPositiveResponse__c +  FreshWarmResponse__c +  FreshNegativeResponse__c) / FreshOpened__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fresh Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>