TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshBounced__c.field-meta.xml
<CustomField>
    <fullName>FreshBounced__c</fullName>
    <label>Fresh Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>