TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshClicked__c.field-meta.xml
<CustomField>
    <fullName>FreshClicked__c</fullName>
    <label>Fresh Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>