TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshEmail__c.field-meta.xml
<CustomField>
    <fullName>FreshEmail__c</fullName>
    <label>Fresh Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>