TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshNegativeResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshNegativeResponse__c</fullName>
    <label>Fresh Negative Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>