TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshOpen__c.field-meta.xml
<CustomField>
    <fullName>FreshOpen__c</fullName>
    <formula>(FreshOpened__c  /  FreshEmail__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fresh Open %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>