TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshOpened__c.field-meta.xml
<CustomField>
    <fullName>FreshOpened__c</fullName>
    <label>Fresh Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>