TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshPositiveResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshPositiveResponse__c</fullName>
    <label>Fresh Positive Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>