TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshUnsubscribed__c.field-meta.xml
<CustomField>
    <fullName>FreshUnsubscribed__c</fullName>
    <label>Fresh Unsubscribed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>