TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/FreshWarmResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshWarmResponse__c</fullName>
    <label>Fresh Warm Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>