TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/MonthlyStats__c.field-meta.xml
<CustomField>
    <fullName>MonthlyStats__c</fullName>
    <label>Monthly Stats</label>
    <referenceTo>Monthly_Stats__c</referenceTo>
    <relationshipLabel>Weekly Stats</relationshipLabel>
    <relationshipName>Weekly_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>