TERP proj/force-app/main/default/objects/Weekly_Stats__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week-1</fullName>
            </value>
            <value>
                <fullName>Week-2</fullName>
            </value>
            <value>
                <fullName>Week-3</fullName>
            </value>
            <value>
                <fullName>Week-4</fullName>
            </value>
            <value>
                <fullName>Week-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>